[package]
name = "proc_macro_argue"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "declarative parsing for procedural macros"
documentation = "https://docs.rs/proc_macro_argue"
repository = "https://github.com/shyguy1412/proc_macro_argue"

[lib]

[dependencies]
proc-macro2 = "1.0.106"
syn = "2.0.118"
